--- a/personalizar-bordas.html
+++ b/personalizar-bordas.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/index.css">
-  <title>Ajudante de Front-end</title>
+  <link rel="stylesheet" href="assets/css/principal.css">
+  <title>Personalizar bordas</title>
 </head>
 <body>
   <section id="sec-titulo">
@@ -13,24 +13,6 @@
       <h1 id="h1-titulo-1">Ajudante de</h1>
       <h1 id="h1-titulo-2">Front-end</h1>
     </div>
-  </section>
-
-  <section id="cont-grid-links">
-    <a href="personalizar-bordas.html">
-      <div>
-        <p>Bordas</p>
-      </div>
-    </a>
-
-    <a href="#">
-      <div>
-      </div>
-    </a>
-
-    <a href="#">
-      <div>
-      </div>
-    </a>
   </section>
   <script src="assets/js/principal.js"></script>
 </body>
