mudança na aparência

--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
       <div>
       </div>
     </a>
+
+    <a href="#">
+      <div>
+      </div>
+    </a>
+
+    <a href="#">
+      <div>
+      </div>
+    </a>
+
+    <a href="#">
+      <div>
+      </div>
+    </a>
   </section>
   <script src="assets/js/principal.js"></script>
 </body>
