não sei o que colocar aqui

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <title>Ajudante de Front-end</title>
 </head>
 <body>
+  <nav>
+    <a href="index.html" id="logo">AF</a>
+    <div class="float-right">
+      <a href="">Sobre</a>
+    </div>
+  </nav>
+
   <section id="sec-titulo">
     <div id="div-titulo-h1">
       <h1 id="h1-titulo-1">Ajudante de</h1>
@@ -16,7 +23,7 @@
   </section>
 
   <section id="cont-grid-links">
-    <a href="personalizar-bordas.html">
+    <a href="personalizar-bordas.html" target="_blank" rel="noopener noreferrer">
       <div>
         <p>Bordas</p>
       </div>
