--- a/personalizar-bordas.html
+++ b/personalizar-bordas.html
@@ -9,9 +9,8 @@
 </head>
 <body>
   <section id="sec-titulo">
-    <div id="div-titulo-h1">
-      <h1 id="h1-titulo-1">Ajudante de</h1>
-      <h1 id="h1-titulo-2">Front-end</h1>
+    <div id="div-titulo-h1" >
+      <h1 class="titulo-princ">Bordas</h1>
     </div>
   </section>
   <script src="assets/js/principal.js"></script>
