esqueci o que eu fiz

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </section>
 
   <section id="cont-grid-links">
-    <a href="personalizar-bordas.html" target="_blank" rel="noopener noreferrer">
+    <a href="estilizar-bordas.html" target="_blank" rel="noopener noreferrer">
       <div>
         <p>Bordas</p>
       </div>
