--- a/estilizar-bordas.html
+++ b/estilizar-bordas.html
@@ -4,13 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/principal.css">
-  <title>Personalizar bordas</title>
+  <link rel="stylesheet" href="assets/css/personalizacao.css">
+  <title>Estilizar bordas</title>
 </head>
 <body>
   <section id="sec-titulo">
     <div id="div-titulo-h1" >
-      <h1 class="titulo-princ">Bordas</h1>
+      <h1 class="titulo-princ">Estilizar bordas</h1>
+    </div>
+  </section>
+
+  <section id="cont-princ">
+    <div id="cont-grid">
+      <section id="sec-vis">
+        <div id="cont-vis"></div>
+      </section>
+      <section id="sec-config"></section>
     </div>
   </section>
   <script src="assets/js/principal.js"></script>
