arrumei uns treco ai

--- a/index.html
+++ b/index.html
@@ -17,24 +17,27 @@
   </section>
 
   <section id="cont-grid-links">
-    <a href="estilizar-bordas.html" target="_blank" rel="noopener noreferrer">
+    <a href="estilizar-conteiner.html" target="_blank" rel="noopener noreferrer">
       <div>
-        <p>Bordas</p>
+        <p>Contêiner < div ></h1></p>
       </div>
     </a>
 
     <a href="#">
       <div>
+        <p>Título < h1 ></p>
       </div>
     </a>
 
     <a href="#">
       <div>
+        <p>Barra Horizontal < hr /></p>
       </div>
     </a>
 
     <a href="#">
       <div>
+        <p>Gradiente</p>
       </div>
     </a>
 
