mudanças no design :)

--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -15,21 +15,19 @@
   </section>
 
   <section id="sec-princ">
-    <div>
-      <input type='textbox' id="id-conteiner" value="conteiner" maxlength="45">
-      <div id="div-vis">
-        <div id="conteiner"></div>
-      </div>
+    <div id="div-vis">
+      <div id="conteiner"></div>
+    </div>
+
+    <div id="div-id" class="col-left">
+      <p>#</p>
+      <input type='textbox' id="id" value="conteiner" maxlength="45" placeholder="id">
+    </div>
+
+    <div class="div-config col-right" id="div-tamanho">
+      <h3>Tamanho do contêiner</h3>
     </div>
     
-    <div id="div-grid">
-      <section></section>
-      <section></section>
-    </div>
-  </section>
-
-  <section>
-    <code>123</code>
   </section>
   <script src="assets/js/principal.js"></script>
 </body>
