--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -52,7 +52,7 @@
   </section>
 
   <section id="sec-code">
-    <code></code>
+    <code>123456</code>
   </section>
   <script src="assets/js/principal.js"></script>
 </body>
