+ div code ver.1

--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -52,7 +52,37 @@
   </section>
 
   <section id="sec-code">
-    <code>123456</code>
+    <div id="div-code">
+      <section id="nav-code">
+        <button class="aberto" id="btn-nav-css" onclick="mudaCode('css', this.id)">CSS</button>
+        <button id="btn-nav-html" onclick="mudaCode('html', this.id)">HTML</button>
+      </section>
+
+      <div style="display: block;">
+        <section class="sec-ling-code" id="sec-ling-css">
+        <div class="div-ling-conteudo aberto" id="div-ling-conteudo-css">
+          <div class="div-num-code"><p>a</p><p>a</p><p>3</p></div>
+          <div class="div-tag-code">
+            <code>aaaa</code>
+            <code>aaaa</code>
+            <code>aaaa</code>
+            <code>aaaa</code>
+          </div>
+        </div>
+      </section>
+
+      <section class="sec-ling-code" id="sec-ling-html">
+        <div class="div-ling-conteudo" id="div-ling-conteudo-html">
+          <div class="div-num-code"><p>1</p></div>
+          <div class="div-tag-code">
+            <code>aaaa</code>
+            <code>aaaa</code>
+          </div>
+        </div>
+      </section>
+      </div>
+      
+    </div>
   </section>
   <script src="assets/js/principal.js"></script>
 </body>
