--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -53,30 +53,20 @@
 
   <section id="sec-code">
     <div id="div-code">
-      <section id="nav-code">
-        <button class="aberto" id="btn-nav-css" onclick="mudaCode('css', this.id)">CSS</button>
-        <button id="btn-nav-html" onclick="mudaCode('html', this.id)">HTML</button>
-      </section>
-
-      <div style="display: block;">
         <section class="sec-ling-code" id="sec-ling-css">
-        <div class="div-ling-conteudo aberto" id="div-ling-conteudo-css">
-          <div class="div-num-code"><p>a</p><p>a</p><p>3</p></div>
-          <div class="div-tag-code">
-            <code>aaaa</code>
-            <code>aaaa</code>
-            <code>aaaa</code>
-            <code>aaaa</code>
+          <h2>CSS</h2>
+          <div class="div-ling-conteudo" id="div-ling-conteudo-css">
+            <div class="div-num-code" id="div-num-code-css"></div>
+            <div class="div-tag-code"  id="div-tag-code-css">
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
       <section class="sec-ling-code" id="sec-ling-html">
+        <h2>HTML</h2>
         <div class="div-ling-conteudo" id="div-ling-conteudo-html">
-          <div class="div-num-code"><p>1</p></div>
-          <div class="div-tag-code">
-            <code>aaaa</code>
-            <code>aaaa</code>
+          <div class="div-num-code" id="div-num-code-html"></div>
+          <div class="div-tag-code"  id="div-tag-code-html">
           </div>
         </div>
       </section>
