--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -57,17 +57,17 @@
           <h2>CSS</h2>
           <div class="div-ling-conteudo" id="div-ling-conteudo-css">
             <div class="div-num-code" id="div-num-code-css"></div>
-            <div class="div-tag-code"  id="div-tag-code-css">
-            </div>
+            <code class="code-bloco"  id="code-bloco-css">
+            </code>
           </div>
         </section>
 
       <section class="sec-ling-code" id="sec-ling-html">
         <h2>HTML</h2>
         <div class="div-ling-conteudo" id="div-ling-conteudo-html">
-          <div class="div-num-code" id="div-num-code-html"></div>
-          <div class="div-tag-code"  id="div-tag-code-html">
-          </div>
+          <div class="div-num-code" id="div-num-code-html"><p>1</p><p>2</p><p>3</p></div>
+          <code class="code-bloco"  id="code-bloco-css">aaaa aaaaaaa aaaa aaaaaaaaa aaaaaaaa aaa aaaa aaaa aaaaaaa aaaa aaaaaaaaa aaaaaaaa aaa aaaa
+          </code>
         </div>
       </section>
       </div>
