--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -32,9 +32,10 @@
         <option value="main">main</option>
         <option value="header">header</option>
         <option value="aside">aside</option>
+        <option value="footer">footer</option>
         <option value="article">article</option>
-        <option value="footer">figure</option>
-        <option value="footer">nav</option>
+        <option value="figure">figure</option>
+        <option value="nav">nav</option>
       </select>
     </div>
 
@@ -56,7 +57,7 @@
         <section class="sec-ling-code" id="sec-ling-css">
           <h2>CSS</h2>
           <div class="div-ling-conteudo" id="div-ling-conteudo-css">
-            <div class="div-num-code" id="div-num-code-css"></div>
+            <div class="div-num-code" id="div-num-code-css"><span>1</span><span>2</span></div>
             <code class="code-bloco"  id="code-bloco-css">
             </code>
           </div>
@@ -65,8 +66,8 @@
       <section class="sec-ling-code" id="sec-ling-html">
         <h2>HTML</h2>
         <div class="div-ling-conteudo" id="div-ling-conteudo-html">
-          <div class="div-num-code" id="div-num-code-html"><p>1</p><p>2</p><p>3</p></div>
-          <code class="code-bloco"  id="code-bloco-css">aaaa aaaaaaa aaaa aaaaaaaaa aaaaaaaa aaa aaaa aaaa aaaaaaa aaaa aaaaaaaaa aaaaaaaa aaa aaaa
+          <div class="div-num-code" id="div-num-code-html"></div>
+          <code class="code-bloco"  id="code-bloco-html">aaaa aaaaaaa aaaa aaaaaaaaa aaaaaaaa aaa aaaa aaaa aaaaaaa aaaa aaaaaaaaa aaaaaaaa aaa aaaa
           </code>
         </div>
       </section>
