alguem me ajuda aaa

--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -57,7 +57,7 @@
         <section class="sec-ling-code" id="sec-ling-css">
           <h2>CSS</h2>
           <div class="div-ling-conteudo" id="div-ling-conteudo-css">
-            <div class="div-num-code" id="div-num-code-css"><span>1</span><span>2</span></div>
+            <div class="div-num-code" id="div-num-code-css"><span>1</span></div>
             <code class="code-bloco"  id="code-bloco-css">
             </code>
           </div>
