--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -67,7 +67,7 @@
         <h2>HTML</h2>
         <div class="div-ling-conteudo" id="div-ling-conteudo-html">
           <div class="div-num-code" id="div-num-code-html"></div>
-          <code class="code-bloco"  id="code-bloco-html">aaaa aaaaaaa aaaa aaaaaaaaa aaaaaaaa aaa aaaa aaaa aaaaaaa aaaa aaaaaaaaa aaaaaaaa aaa aaaa
+          <code class="code-bloco"  id="code-bloco-html">
           </code>
         </div>
       </section>
