--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -48,6 +48,16 @@
 
       <section>
         <h3>Bordas</h3>
+        <select name="estilo-borda" id="sel-borda">
+          <option value="solid" name="solida">sólida</option>
+          <option value="dashed" name="tracejada">tracejada</option>
+          <option value="dotted" name="pontilhada">pontilhada</option>
+          <option value="double" name="dupla">dupla</option>
+          <option value="groove" name="entalhada">entalhada</option>
+          <option value="ridge" name="ressaltada">ressaltada</option>
+          <option value="inset" name="baixo-relevo">baixo relevo</option>
+          <option value="outset" name="alto-relevo">alto relevo</option>
+        </select>
       </section>
     </div>
   </section>
@@ -76,5 +86,6 @@
     </div>
   </section>
   <script src="assets/js/principal.js"></script>
+  <script src="assets/js/personalizacao.js"></script>
 </body>
 </html>
