--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -71,6 +71,9 @@
             <code class="code-bloco"  id="code-bloco-css">
             </code>
           </div>
+          <div class="div-config-code">
+            <input type="checkbox" name="cbx-red-css" value="Código reduzido">
+          </div>
         </section>
 
       <section class="sec-ling-code" id="sec-ling-html">
@@ -79,6 +82,9 @@
           <div class="div-num-code" id="div-num-code-html"></div>
           <code class="code-bloco"  id="code-bloco-html">
           </code>
+        </div>
+        <div class="div-config-code">
+          
         </div>
       </section>
       </div>
