+ cbx css funfando

--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -72,7 +72,7 @@
             </code>
           </div>
           <div class="div-config-code">
-            <input type="checkbox" name="cbx-red-css" value="Código reduzido">
+            <input type="checkbox" name="cbx-red-css" id="cbx-red-css" value="Código reduzido">
           </div>
         </section>
 
