--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -49,7 +49,7 @@
       <section>
         <h3>Borda</h3>
         <div class="div-cbx">
-          <input type="checkbox" onclick="marcaCbx('cbx-borda-tipo-lados')" name="borda-tipo-lados" id="cbx-borda-tipo-lados">
+          <input type="checkbox" name="borda-tipo-lados" id="cbx-borda-tipo-lados">
           <p onclick="marcaCbx('cbx-borda-tipo-lados')">Adicionar mesmo estilo para todos os lados</p>
         </div>
 
@@ -81,7 +81,7 @@
           </div>
           <div class="div-config-code">
             <div class="div-cbx">
-              <input type="checkbox" onclick="marcaCbx('cbx-red-css')" name="cbx-red-css" id="cbx-red-css" value="Código reduzido">
+              <input type="checkbox" name="cbx-red-css" id="cbx-red-css" value="Código reduzido">
               <p onclick="marcaCbx('cbx-red-css')">Reduzir código</p>
             </div>
           </div>
