corzinha border funfando

--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -68,7 +68,7 @@
         <div>
           <label for="clr-border">Cor</label>
           <input type="textbox" name="txt-cor-border" id="txt-cor-border">
-          <input type="color" name="clr-border" id="clr-border">
+          <input type="color" name="clr-border" id="clr-border" value="#320777">
         </div>
       </section>
     </div>
