tamanho border funfando

--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -66,9 +66,15 @@
         </select>
 
         <div>
-          <label for="clr-border">Cor</label>
-          <input type="textbox" name="txt-cor-border" id="txt-cor-border">
+          <label for="txt-cor-border">Cor</label>
+          <input type="textbox" name="txt-cor-border" id="txt-cor-border" value="#320777">
           <input type="color" name="clr-border" id="clr-border" value="#320777">
+        </div>
+
+        <div>
+          <label for="txt-tam-border">Tamanho</label>
+          <input type="number" name="txt-tam-border" id="txt-tam-border" value="2">
+          <select name="sel-tam-border" id="sel-tam-border" class="sel-tamanho"></select>
         </div>
       </section>
     </div>
