--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -73,7 +73,7 @@
 
         <div>
           <label for="txt-tam-border">Tamanho</label>
-          <input type="number" name="txt-tam-border" id="txt-tam-border" value="2">
+          <input type="number" name="txt-tam-border" id="txt-tam-border" value="2" min="1">
           <select name="sel-tam-border" id="sel-tam-border" class="sel-tamanho"></select>
         </div>
       </section>
