--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -74,7 +74,19 @@
         <div>
           <label for="txt-tam-border">Tamanho</label>
           <input type="number" name="txt-tam-border" id="txt-tam-border" value="2" min="1">
-          <select name="sel-tam-border" id="sel-tam-border" class="sel-tamanho"></select>
+          <select name="sel-tam-border" id="sel-tam-border" class="sel-tamanho">
+            <option value="px" name="px" selected>px</option>
+            <option value="%" name="porc">%</option>
+            <option value="em" name="em">em</option>
+            <option value="rem" name="rem">rem</option>
+            <option value="vw" name="vw">vw</option>
+            <option value="vh" name="vh">vh</option>
+            <option value="pt" name="pt">pt</option>
+            <option value="in" name="in">in</option>
+            <option value="cm" name="cm">cm</option>
+            <option value="mm" name="mm">mm</option>
+            <option value="pc" name="pc">pc</option>
+          </select>
         </div>
       </section>
     </div>
