--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -51,46 +51,52 @@
     
     <section id="sec-border" class="sec-estilo">
       <div class="div-config col-left">
-        <h3>Borda</h3>
         <div class="div-cbx">
           <input type="checkbox" name="borda-tipo-lados" id="cbx-borda-tipo-lados" checked>
           <p onclick="marcaCbx('cbx-borda-tipo-lados')">Adicionar mesmo estilo para todos os lados</p>
         </div>
 
-        <label for="sel-borda">Estilo</label>
-        <select name="estilo-borda" id="sel-borda">
-          <option value="solid" name="solida">sólida</option>
-          <option value="dashed" name="tracejada" selected>tracejada</option>
-          <option value="dotted" name="pontilhada">pontilhada</option>
-          <option value="double" name="dupla">dupla</option>
-          <option value="groove" name="entalhada">entalhada</option>
-          <option value="ridge" name="ressaltada">ressaltada</option>
-          <option value="inset" name="baixo-relevo">baixo relevo</option>
-          <option value="outset" name="alto-relevo">alto relevo</option>
-        </select>
+        <div>
+          <label for="sel-borda">Estilo</label>
+          <select name="estilo-borda" id="sel-borda">
+            <option value="solid" name="solida">sólida</option>
+            <option value="dashed" name="tracejada" selected>tracejada</option>
+            <option value="dotted" name="pontilhada">pontilhada</option>
+            <option value="double" name="dupla">dupla</option>
+            <option value="groove" name="entalhada">entalhada</option>
+            <option value="ridge" name="ressaltada">ressaltada</option>
+            <option value="inset" name="baixo-relevo">baixo relevo</option>
+            <option value="outset" name="alto-relevo">alto relevo</option>
+          </select>
+        </div>
 
         <div>
           <label for="txt-cor-border">Cor</label>
-          <input type="textbox" name="txt-cor-border" id="txt-cor-border" value="#320777">
-          <input type="color" name="clr-border" id="clr-border" value="#320777">
+          <div class="div-est-tamanho">
+            <input type="textbox" name="txt-cor-border" id="txt-cor-border" value="#320777" size="10">
+            <input type="color" name="clr-border" id="clr-border" value="#320777">
+          </div>
         </div>
 
         <div>
           <label for="txt-tam-border">Tamanho</label>
-          <input type="number" name="txt-tam-border" id="txt-tam-border" value="2" min="1">
-          <select name="sel-tam-border" id="sel-tam-border" class="sel-tamanho">
-            <option value="px" name="px" selected>px</option>
-            <option value="%" name="porc">%</option>
-            <option value="em" name="em">em</option>
-            <option value="rem" name="rem">rem</option>
-            <option value="vw" name="vw">vw</option>
-            <option value="vh" name="vh">vh</option>
-            <option value="pt" name="pt">pt</option>
-            <option value="in" name="in">in</option>
-            <option value="cm" name="cm">cm</option>
-            <option value="mm" name="mm">mm</option>
-            <option value="pc" name="pc">pc</option>
-          </select>
+          <div class="div-est-tamanho">
+            <input type="number" name="txt-tam-border" id="txt-tam-border" value="2" min="1" size="6">
+            <select name="sel-tam-border" id="sel-tam-border" class="sel-tamanho">
+              <option value="px" name="px" selected>px</option>
+              <option value="%" name="porc">%</option>
+              <option value="em" name="em">em</option>
+              <option value="rem" name="rem">rem</option>
+              <option value="vw" name="vw">vw</option>
+              <option value="vh" name="vh">vh</option>
+              <option value="pt" name="pt">pt</option>
+              <option value="in" name="in">in</option>
+              <option value="cm" name="cm">cm</option>
+              <option value="mm" name="mm">mm</option>
+              <option value="pc" name="pc">pc</option>
+            </select>
+          </div>
+          
         </div>
       </div>
     </section>
