--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -42,6 +42,46 @@
           <option value="nav">nav</option>
         </select>
       </div>
+
+      <div class="div-config col-right">
+        <div class="div-categ-estilo">
+          <label for="txt-width">Largura</label>
+          <div class="div-est-tamanho">
+            <input type="textbox" id="txt-width" name="larg" size="6" value="300">
+            <select name="sel-width" id="sel-width" class="sel-tamanho">
+              <option value="px" name="px" selected>px</option>
+              <option value="em" name="em">em</option>
+              <option value="rem" name="rem">rem</option>
+              <option value="vw" name="vw">vw</option>
+              <option value="vh" name="vh">vh</option>
+              <option value="pt" name="pt">pt</option>
+              <option value="in" name="in">in</option>
+              <option value="cm" name="cm">cm</option>
+              <option value="mm" name="mm">mm</option>
+              <option value="pc" name="pc">pc</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="div-categ-estilo">
+          <label for="txt-height">Altura</label>
+          <div class="div-est-tamanho">
+            <input type="textbox" id="txt-height" name="alt" size="6">
+            <select name="sel-height" id="sel-height" class="sel-tamanho">
+              <option value="px" name="px" selected>px</option>
+              <option value="em" name="em">em</option>
+              <option value="rem" name="rem">rem</option>
+              <option value="vw" name="vw">vw</option>
+              <option value="vh" name="vh">vh</option>
+              <option value="pt" name="pt">pt</option>
+              <option value="in" name="in">in</option>
+              <option value="cm" name="cm">cm</option>
+              <option value="mm" name="mm">mm</option>
+              <option value="pc" name="pc">pc</option>
+            </select>
+          </div>
+        </div>
+      </div>
     </section>
     
     <section id="sec-border" class="sec-estilo">
