voodoo é pra jacu

--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -47,7 +47,7 @@
         <div class="div-categ-estilo">
           <label for="txt-width">Largura</label>
           <div class="div-est-tamanho">
-            <input type="textbox" id="txt-width" name="larg" size="6" value="300">
+            <input type="number" id="txt-width" name="larg" size="6" value="300">
             <select name="sel-width" id="sel-width" class="sel-tamanho">
               <option value="px" name="px" selected>px</option>
               <option value="em" name="em">em</option>
@@ -66,7 +66,7 @@
         <div class="div-categ-estilo">
           <label for="txt-height">Altura</label>
           <div class="div-est-tamanho">
-            <input type="textbox" id="txt-height" name="alt" size="6">
+            <input type="number" id="txt-height" name="alt" size="6" value="300">
             <select name="sel-height" id="sel-height" class="sel-tamanho">
               <option value="px" name="px" selected>px</option>
               <option value="em" name="em">em</option>
