--- a/estilizar-conteiner.html
+++ b/estilizar-conteiner.html
@@ -44,6 +44,7 @@
       </div>
 
       <div class="div-config col-right">
+        <h3>Tamanho</h3>
         <div class="div-categ-estilo">
           <label for="txt-width">Largura</label>
           <div class="div-est-tamanho">
@@ -81,6 +82,36 @@
             </select>
           </div>
         </div>
+
+        <h3>Cantos</h3>
+        <div class="div-categ-estilo">
+          <div class="div-cbx" onclick="abreDiv('div-sel-canto', 'cbx-canto')">
+            <input type="checkbox" id="cbx-canto" name="cantos-arred" checked>
+            <p onclick="marcaCbx('cbx-canto'); ">Cantos arredondados</p>
+          </div>
+          <div id="div-sel-canto" class="div-est-tamanho">
+            <input type="number" id="txt-canto" size="6" min="0" value="20">
+            <select name="sel-canto" id="sel-canto" class="sel-tamanho">
+              <option value="px" name="px" selected>px</option>
+              <option value="%" name="%">%</option>
+              <option value="em" name="em">em</option>
+              <option value="rem" name="rem">rem</option>
+              <option value="vw" name="vw">vw</option>
+              <option value="vh" name="vh">vh</option>
+              <option value="pt" name="pt">pt</option>
+              <option value="in" name="in">in</option>
+              <option value="cm" name="cm">cm</option>
+              <option value="mm" name="mm">mm</option>
+              <option value="pc" name="pc">pc</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <section class="sec-estilo" id="sec-fundo">
+      <div class="col-right">
+
       </div>
     </section>
     
@@ -119,6 +150,7 @@
             <input type="number" name="txt-tam-border" id="txt-tam-border" value="2" min="1" size="6">
             <select name="sel-tam-border" id="sel-tam-border" class="sel-tamanho">
               <option value="px" name="px" selected>px</option>
+              <option value="%" name="%">%</option>
               <option value="em" name="em">em</option>
               <option value="rem" name="rem">rem</option>
               <option value="vw" name="vw">vw</option>
